spacing tweaks, added modal title, fixed button text

--- a/less/pages/home.less
+++ b/less/pages/home.less
@@ -119,6 +119,21 @@
 }
 
 .modal-pledge {
+  h3 {
+    font-size: 2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-align: center;
+    color: @blueSidebarColor;
+    margin-top: -1rem;
+    margin-bottom: 2rem;
+  }
+  img {
+    margin-top: -4rem;
+  }
+  strong {
+    font-weight: 600;
+  }
   ul {
     list-style-type: none;
     padding-left: 3rem;
